--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.3.3",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-vue": "^4.1.0",
     "sass": "^1.32.12",
     "typescript": "^5.0.2",
